# smart_search

./: README.md  app.py  pyproject.toml
data/processed/: people_data_1000_with_textchunk.xlsx
data/raw/: people_data_100.xlsx  people_data_1000.xlsx  people_data_500.xlsx
embeddings/: metadata.csv
prompts/: prompt_v1.txt
scripts/: embed_and_index.py  preprocess.py  search.py  search_with_llm.py
styles/: animations.css  base.css  buttons.css  loader.css  style.css  theme.css
utils/: __init__.py  answer_generator.py  azure_openai_client.py  config.py  embedder.py  examples.py  onboarding.py  prompt_loader.py  reranker.py  search_engine.py  theme.py
